# c-template

./: .clang-format  .gitignore  Makefile  config.mk  meson.build
man/: example.1.md
src/: main.c
test/: test1.c  test2.c
